tests/broken/stray-endif.stderr
error: Unexpected 'endif' statement
 --> tests/broken/stray-endif.rs:4:31
  |
4 | #[oxiplate = "{{ action }}{%- endif -%}"]
  |                               ^^^^^
